--- a/dev/scss/sections/_footer.scss
+++ b/dev/scss/sections/_footer.scss
@@ -3,8 +3,8 @@
 ============= */
 #footer{
     display: grid;
-    grid-template-columns: 310 auto;
-    grid-template-areas: " . footer";
+    grid-template-columns: 310px auto 15px ;
+    grid-template-areas: " . footer . ";
 
     #footer-content{
         grid-area: footer;
