--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -415,11 +415,10 @@ textarea {
 ============= */
 #section-6 #section-6-container {
   display: grid;
-  grid-template-columns: 10px auto 10px;
+  grid-template-columns: 15px auto 15px;
   grid-template-areas: ". section-6 ."; }
   #section-6 #section-6-container img {
-    width: 100%;
-    padding-top: 10; }
+    width: 100%; }
   #section-6 #section-6-container #section-6-content {
     grid-area: section-6; }
 
