--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -9,3 +9,17 @@ ul{
         list-style: none;
     }
 }
+
+.show-for-md{
+    display: none;
+    @include md{
+        display: block;
+    }
+}
+
+.show-for-lg{
+    display: none;
+    @include lg{
+        display: block;
+    }
+}
