--- a/dev/scss/sections/_section-2.scss
+++ b/dev/scss/sections/_section-2.scss
@@ -3,50 +3,51 @@
 ============= */
 #section-2{
 
-   
+@include xl {
+    display: grid;
+            grid-template-columns: auto 1200 auto;
+            grid-template-areas: ". section-2-desktop .";
 
-    #section-2-tablet{
+}    
+
+    #section-2-desktop{
+
+        @include lg{
+            display: grid;
+            grid-template-columns: 50% auto;
+            grid-template-areas: "image section-2-content";
+            }       
 
         @include md{
             display: grid;
             grid-template-columns: 40% auto;
-            
-        
-}
-            #section-2-tablet-content{
-                grid-area: section-2;
+            grid-template-areas: "image section-2-content";
             }
 
-        aside{ 
+            aside { img{ width: 100%;} }
+
+        @include xl {
+            grid-area: section-2-desktop;
+        }
             
-            img{
-            width: 100%;
-        }
-
-        }
-
-        
+    
+      
         #section-2-container {
             display: grid;
             grid-template-columns: 15px auto 15px ;
-            grid-template-areas: ". section-2 ."; 
+            grid-template-areas: ". section-2-content ."; 
             
             #section-2-content{
-                grid-area: section-2; 
-            
-            // border: 1px solid red; 
+                grid-area: section-2-content;
         }
-         
-        
-      
-
-    }
+          }
    
+          #section-2-image{
+              grid-area: image;
+          }
 
   
 }
-
-
 }
 
     
