--- a/dev/scss/sections/_section-4.scss
+++ b/dev/scss/sections/_section-4.scss
@@ -2,12 +2,29 @@
     Section 4
 ============= */
 #section-4{
+    
     display: grid;
-    grid-template-columns: 15px auto 15px;
-    grid-template-areas: ". section-4 .";
+    grid-template-columns: 15px auto 15px ;
+    grid-template-areas: ". quote . ";
 
-    #section-4-content{
-        grid-area: section-4;
-    }
+    @include md{
+        display: grid;
+        grid-template-columns: auto 500px auto ;
+        grid-template-areas: ". quote . ";
+ }
+
+    @include lg{
+        display: grid;
+        grid-template-columns: auto 700px auto ;
+        grid-template-areas: ". quote . ";
+}
+  
+            
+            #section-4-content{
+                grid-area: quote ;
+              
+          }
+   
+    
 
 }
