--- a/dev/scss/sections/_section-5.scss
+++ b/dev/scss/sections/_section-5.scss
@@ -4,17 +4,57 @@
 
 #section-5{
     display: grid;
-    grid-template-columns: auto ;
-    grid-template-areas: '. section-5 .';
+    grid-template-columns: 0% auto 0% ;
+    grid-template-areas: ". section-5 .";
+    
+    @include xl{
+        grid-template-columns: auto 1200px auto;
+    }
 
     ul{
         grid-area: section-5;
         display: grid;
         gap:20px;
 
+       
+        @include md{
+            grid-template-columns: repeat(2, 1fr);
+            // grid-template-columns: 50% 50%;
+            // grid-template-columns: 50% auto;
+            grid-template-areas: 
+            "g1 g1"
+            "g2 g3";
+        }
+
+        @include lg{
+            grid-template-columns: 60% 40%;
+            // grid-template-columns: 50% 50%;
+            // grid-template-columns: 50% auto;
+            grid-template-areas: 
+            "g1 g2"
+            "g1 g3";
+        }
         li{
             img{
                 width: 100%;
+            }
+        }
+
+        #g1{
+            @include md{
+                grid-area: g1;
+            }
+        }
+
+        #g2{
+            @include md{
+                grid-area: g2;
+            }
+        }
+
+        #g3{
+            @include md{
+                grid-area: g3;
             }
         }
     }
