--- a/dev/scss/sections/_section-6.scss
+++ b/dev/scss/sections/_section-6.scss
@@ -3,21 +3,71 @@
 ============= */ 
 
 #section-6{
+    display: grid;
+    grid-template-columns: 5% auto 5%;
+    grid-template-areas: ". section-6 .";
+
+    @include xl {
+        display: grid;
+                grid-template-columns: auto 1200 auto;
+                grid-template-areas: ". section-6-content .";
+    
+    }    
+
+
+    #section-6-content{
+        grid-area: section-6;
+
+        @include xl {
+            grid-area: section-6-content;
+        }
+        @include lg{
+            display: grid;
+                grid-template-columns: 30% auto ;
+                grid-template-areas: " image type";
+
+        }
+        
+        #section-6-image{
+            @include md{
+                display: grid;
+                grid-template-columns: 30% auto 30%;
+                grid-template-areas: ". image .";
+            }
+
+            #section-6-image-content{
+                @include md{
+                    grid-area: image;
+                }
+            }
+        }
+
+        #section-6-type{
+            @include md{
+                display: grid;
+                grid-template-columns: 10% auto 10%;
+                grid-template-areas: ". type .";
+                
+            }
+
+            @include lg{
+                display: grid;
+                grid-template-columns: 10% auto 10%;
+                grid-template-areas: ". type .";
+                margin: 85px;
+                
+            }
+
+            #section-6-type-content{
+                @include md{
+                    grid-area: type;
+                }
+            }
+        }
+
+    
+    }
     
 
-    #section-6-container{
-        display: grid;
-        grid-template-columns: 15px auto 15px;
-        grid-template-areas: ". section-6 .";
-
-
-        img {
-            width: 100%;
-
-        }
-
-        #section-6-content{
-            grid-area: section-6;
-        }
-    }
+   
 }
