--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -407,7 +407,8 @@ textarea {
 #section-2 #section-2-desktop #section-2-container {
   display: grid;
   grid-template-columns: 15px auto 15px;
-  grid-template-areas: ". section-2-content ."; }
+  grid-template-areas: ". section-2-content .";
+  align-items: center; }
   #section-2 #section-2-desktop #section-2-container #section-2-content {
     grid-area: section-2-content; }
 
