--- a/dev/scss/sections/_section-2.scss
+++ b/dev/scss/sections/_section-2.scss
@@ -35,7 +35,8 @@
         #section-2-container {
             display: grid;
             grid-template-columns: 15px auto 15px ;
-            grid-template-areas: ". section-2-content ."; 
+            grid-template-areas: ". section-2-content .";
+            align-items: center; 
             
             #section-2-content{
                 grid-area: section-2-content;
