--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -480,31 +480,36 @@ textarea {
 ============= */
 #section-6 {
   display: grid;
-  grid-template-columns: 5% auto 5%;
-  grid-template-areas: ". section-6 ."; }
+  grid-template-columns: 15px auto 15px;
+  grid-template-areas: ". section-6 .";
+  align-items: center; }
   @media (min-width: 1200px) {
     #section-6 {
       display: grid;
-      grid-template-columns: auto 1200 auto;
-      grid-template-areas: ". section-6-content ."; } }
+      grid-template-columns: auto 1000 auto;
+      grid-template-areas: ".section-6 ."; } }
   #section-6 #section-6-content {
     grid-area: section-6; }
-    @media (min-width: 1200px) {
-      #section-6 #section-6-content {
-        grid-area: section-6-content; } }
     @media (min-width: 992px) {
       #section-6 #section-6-content {
         display: grid;
-        grid-template-columns: 30% auto;
-        grid-template-areas: " image type"; } }
+        grid-template-columns: 30% 70%;
+        align-items: center;
+        grid-gap: 20px; } }
+    #section-6 #section-6-content aside img {
+      width: 100%; }
     @media (min-width: 768px) {
       #section-6 #section-6-content #section-6-image {
         display: grid;
         grid-template-columns: 30% auto 30%;
         grid-template-areas: ". image ."; } }
-    @media (min-width: 768px) {
-      #section-6 #section-6-content #section-6-image #section-6-image-content {
-        grid-area: image; } }
+    @media (min-width: 992px) {
+      #section-6 #section-6-content #section-6-image {
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-areas: "image "; } }
+    #section-6 #section-6-content #section-6-image #section-6-image-content {
+      grid-area: image; }
     @media (min-width: 768px) {
       #section-6 #section-6-content #section-6-type {
         display: grid;
@@ -513,12 +518,11 @@ textarea {
     @media (min-width: 992px) {
       #section-6 #section-6-content #section-6-type {
         display: grid;
-        grid-template-columns: 10% auto 10%;
-        grid-template-areas: ". type .";
-        margin: 85px; } }
-    @media (min-width: 768px) {
-      #section-6 #section-6-content #section-6-type #section-6-type-content {
-        grid-area: type; } }
+        grid-template-columns: auto;
+        grid-template-areas: "type"; } }
+    #section-6 #section-6-content #section-6-type #section-6-type-content {
+      grid-area: type; }
+
 /* =============
     Footer
 ============= */
