--- a/dev/scss/sections/_section-6.scss
+++ b/dev/scss/sections/_section-6.scss
@@ -34,7 +34,7 @@
         aside{
         
             img{
-                width: 100%;
+                width: 300px;
             }
         }
        
