--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -497,7 +497,7 @@ textarea {
         align-items: center;
         grid-gap: 20px; } }
     #section-6 #section-6-content aside img {
-      width: 100%; }
+      width: 300px; }
     @media (min-width: 768px) {
       #section-6 #section-6-content #section-6-image {
         display: grid;
