--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -478,50 +478,32 @@ textarea {
 /* =============
     Section 6
 ============= */
-#section-6 {
-  display: grid;
-  grid-template-columns: 15px auto 15px;
-  grid-template-areas: ". section-6 .";
-  align-items: center; }
-  @media (min-width: 1200px) {
-    #section-6 {
-      display: grid;
-      grid-template-columns: auto 1000 auto;
-      grid-template-areas: ". section-6 ."; } }
+@media (min-width: 768px) {
+  #section-6 {
+    display: grid;
+    grid-template-columns: auto 60% auto;
+    grid-template-areas: ". section-6 ."; } }
+
+@media (min-width: 1200px) {
+  #section-6 {
+    grid-template-columns: auto 800px auto; } }
+
+@media (min-width: 768px) {
   #section-6 #section-6-content {
-    grid-area: section-6; }
-    @media (min-width: 992px) {
-      #section-6 #section-6-content {
-        display: grid;
-        grid-template-columns: 30% 70%;
-        align-items: center;
-        grid-gap: 20px; } }
-    #section-6 #section-6-content aside img {
-      width: 300px; }
-    @media (min-width: 768px) {
-      #section-6 #section-6-content #section-6-image {
-        display: grid;
-        grid-template-columns: 30% auto 30%;
-        grid-template-areas: ". image ."; } }
-    @media (min-width: 992px) {
-      #section-6 #section-6-content #section-6-image {
-        display: grid;
-        grid-template-columns: auto;
-        grid-template-areas: "image "; } }
-    #section-6 #section-6-content #section-6-image #section-6-image-content {
-      grid-area: image; }
-    @media (min-width: 768px) {
-      #section-6 #section-6-content #section-6-type {
-        display: grid;
-        grid-template-columns: 10% auto 10%;
-        grid-template-areas: ". type ."; } }
-    @media (min-width: 992px) {
-      #section-6 #section-6-content #section-6-type {
-        display: grid;
-        grid-template-columns: auto;
-        grid-template-areas: "type"; } }
-    #section-6 #section-6-content #section-6-type #section-6-type-content {
-      grid-area: type; }
+    grid-area: section-6; } }
+
+@media (min-width: 992px) {
+  #section-6 #section-6-content {
+    display: grid;
+    grid-template-columns: 40% auto; } }
+
+#section-6 #section-6-content #section-6-type {
+  display: grid;
+  grid-template-columns: 10px auto 10px;
+  grid-template-areas: ". section-6-type . ";
+  align-items: center; }
+  #section-6 #section-6-content #section-6-type #section-6-type-content {
+    grid-area: section-6-type; }
 
 /* =============
     Footer
