--- a/dev/scss/sections/_section-1.scss
+++ b/dev/scss/sections/_section-1.scss
@@ -3,17 +3,26 @@
 ============= */
 
 #section-1{
-    
-    #section-1-container {
-        display: grid;
-        grid-template-columns: 15px auto 15px;
-        grid-template-areas: ". section-1 ."; }
-     
-    #section-1-content{
-        grid-area: section-1; }
+background-image: url('../img/section-1/hero.jpg');
+background-size: cover;
 
-    img{
-        width: 100%;
-    }
+background-position: center;
+height: 50vh;
+
+@include md{
+    height: 50vh;
+    background-position: center -100;
+    
+}
+
+@include lg{
+    height: 90vh;
+    
+}
+@include xl{
+    height: 90;
+    
+}
+
 
 }
