--- a/dev/scss/sections/_section-3.scss
+++ b/dev/scss/sections/_section-3.scss
@@ -2,10 +2,27 @@
     Section 3
 ============= */
 #section-3{
-
-    img{
-        width: 100%;
+    background-image: url('../img/section-3/hero-2.jpg');
+    background-size: cover;
+  
+    background-position: center;
+    height: 50vh;
+    margin: 30px 0px 0px 0px;
+    
+    @include md{
+        height: 45vh;
+        margin: 0px;
+        
     }
-
-
-}
+    
+    @include lg{
+        height: 90vh;
+        background-position: center;
+    }
+    @include xl{
+        height: 90vh;
+        
+    }
+    
+    
+    }
