--- a/dev/scss/sections/_section-4.scss
+++ b/dev/scss/sections/_section-4.scss
@@ -2,22 +2,45 @@
     Section 4
 ============= */
 #section-4{
-    
+   hr{height: 3px;
+    background-color: black;
+    border: none;
+
+   }
+    h3{
+        font-family: 'noto serif';
+        font-size: rem-calc(18);
+        line-height: rem-calc(40);
+        color: #B7A78D;
+        margin: 20px 0px 20px 0px;
+        @include md{
+            font-size: rem-calc(27);
+            line-height: rem-calc(50) ;
+        }
+        @include lg{
+            font-size: rem-calc(40);
+            line-height: rem-calc(70) ;
+        }
+    }
     display: grid;
     grid-template-columns: 15px auto 15px ;
     grid-template-areas: ". quote . ";
     text-align: center;
+    margin: 40px 0px 20px 0px;
 
     @include md{
         display: grid;
         grid-template-columns: auto 500px auto ;
         grid-template-areas: ". quote . ";
+        margin: 50px 0px 30px 0px;
+
  }
 
     @include lg{
         display: grid;
         grid-template-columns: auto 700px auto ;
         grid-template-areas: ". quote . ";
+        margin: 60px 0px 40px 0px;
 }
   
             
