--- a/dev/scss/sections/_section-2.scss
+++ b/dev/scss/sections/_section-2.scss
@@ -1,115 +1,120 @@
 /* =============
     Section 2
 ============= */
-#section-2{
+#section-2 {
 
-@include xl {
-    display: grid;
-            grid-template-columns: auto 1200 auto;
-            grid-template-areas: ". section-2-desktop .";
+    @include xl {
+        display: grid;
+        grid-template-columns: auto 1200 auto;
+        grid-template-areas: ". section-2-desktop .";
 
-}    
+    }
 
-    #section-2-desktop{
+    #section-2-desktop {
 
-       
 
-        @include lg{
+
+        @include lg {
             display: grid;
             grid-template-columns: 50% auto;
             grid-template-areas: "image section-2-content";
             margin: 60px 0px 60px 0px;
-            }       
+        }
 
-        @include md{
+        @include md {
             display: grid;
             grid-template-columns: 40% auto;
             grid-template-areas: "image section-2-content";
-            margin: 60px 0px 60px 0px; 
+            margin: 60px 0px 60px 0px;
+        }
+
+        aside {
+            background-image: url(../img/section-2/left-side.jpg);
+            height: 80vh;
+            background-position: center;
+            background-size: cover;
+
+            @include md {
+                height: 45vh;
             }
 
-            aside { 
-                background-image: url(../img/section-2/left-side.jpg);
-                height: 80vh;
-                background-position: center;
-                background-size: cover;
-                
-                @include md{
-                    height: 45vh;}
-                @include lg{
-                        height: 70vh;}    
+            @include lg {
+                height: 70vh;
             }
+        }
 
         @include xl {
             grid-area: section-2-desktop;
         }
-            
-    
-      
+
+
+
         #section-2-container {
             display: grid;
-            grid-template-columns: 15px auto 15px ;
+            grid-template-columns: 15px auto 15px;
             grid-template-areas: ". section-2-content .";
-            align-items: center; 
+            align-items: center;
             margin: 65px 0px 65px 0px;
             text-align: center;
 
-            hr{
+            hr {
                 height: 3px;
                 background-color: #B7A78D;
                 border: none;
             }
 
-            h3{ font-family: 'Noto Serif';
+            h3 {
+                font-family: 'Noto Serif';
                 line-height: rem-calc(40);
                 font-size: rem-calc(17);
                 margin: 20px 0px 5px 0px;
 
-                @include md{
-                line-height: rem-calc(40);
-                font-size: rem-calc(24);
+                @include md {
+                    line-height: rem-calc(40);
+                    font-size: rem-calc(24);
                 }
             }
 
-            p{ margin: 0px 0px 20px 0px;
+            p {
+                margin: 0px 0px 20px 0px;
                 font-family: 'Open Sans';
                 line-height: rem-calc(40);
                 font-size: rem-calc(16);
-                
 
-                @include md{
-                line-height: rem-calc(40);
-                font-size: rem-calc(18);
+
+                @include md {
+                    line-height: rem-calc(40);
+                    font-size: rem-calc(18);
                 }
 
             }
-            
-            @include md{
+
+            @include md {
                 text-align: left;
-                
-                h3{
+
+                h3 {
                     margin: 20px 0px 5px 0px;
                 }
 
-                p{ margin: 0px 0px 20px 0px;
+                p {
+                    margin: 0px 0px 20px 0px;
 
                 }
             }
-            @include lg{
+
+            @include lg {
                 margin: 20px 0px 20px 0px;
             }
-            
-            #section-2-content{
+
+            #section-2-content {
                 grid-area: section-2-content;
+            }
         }
-          }
-   
-          #section-2-image{
-              grid-area: image;
-          }
 
-  
-}
-}
+        #section-2-image {
+            grid-area: image;
+        }
 
-    
+
+    }
+}
