--- a/dev/scss/sections/_section-5.scss
+++ b/dev/scss/sections/_section-5.scss
@@ -2,62 +2,66 @@
     Section 5
 ============= */
 
-#section-5{
+#section-5 {
     display: grid;
-    grid-template-columns: 0% auto 0% ;
+    grid-template-columns: 0% auto 0%;
     grid-template-areas: ". section-5 .";
-    
-    @include xl{
+
+    @include xl {
         grid-template-columns: auto 1200px auto;
     }
 
-    ul{
+    ul {
         grid-area: section-5;
         grid-template-rows: repeat(3, 300px);
         display: grid;
-        gap:20px;
+        gap: 20px;
         grid-template-areas:
-        "g1"
-        "g2"
-        "g3";
+            "g1"
+            "g2"
+            "g3";
 
-       
-        @include md{
+
+        @include md {
             grid-template-columns: repeat(2, 50% 50%);
             grid-template-rows: repeat(3, 340px);
-           grid-template-areas: 
-           "g1 g1"
-           "g1 g1"
-           "g2 g3";
+            grid-template-areas:
+                "g1 g1"
+                "g1 g1"
+                "g2 g3";
         }
 
-        @include lg{
+        @include lg {
             grid-template-columns: repeat(2, 65% 35%);
             grid-template-rows: repeat(2, 340px);
-            grid-template-areas: 
-            "g1 g2"
-            "g1 g3";
+            grid-template-areas:
+                "g1 g2"
+                "g1 g3";
         }
-        li{
-          background-size: cover;
-          background-position: center;
-          
+
+        li {
+            background-size: cover;
+            background-position: center;
+
 
         }
 
-        #g1{ background-image: url(../img/section-5/gallery-1.jpg);
-             grid-area: g1;
-            
+        #g1 {
+            background-image: url(../img/section-5/gallery-1.jpg);
+            grid-area: g1;
+
         }
 
-        #g2{ background-image: url(../img/section-5/gallery-2.jpg);
+        #g2 {
+            background-image: url(../img/section-5/gallery-2.jpg);
             grid-area: g2;
-            
+
         }
 
-        #g3{ background-image: url(../img/section-5/gallery-3.jpg);
-                grid-area: g3;
-            
+        #g3 {
+            background-image: url(../img/section-5/gallery-3.jpg);
+            grid-area: g3;
+
         }
     }
 
