--- a/dev/scss/components/_navigation.scss
+++ b/dev/scss/components/_navigation.scss
@@ -1,3 +1,45 @@
 /* =============
     Navigation
 ============= */
+#nav-container {
+    ul {
+        height: 100%;
+        text-align: right;
+
+
+        @include lg {
+            display: flex;
+            justify-content: flex-end;
+            margin-right: 20px;
+        }
+
+        li {
+
+
+            a:link,
+            a:visited {
+                color: white;
+                display: inline-block;
+                font-family: 'Open Sans', serif;
+                font-weight: 700;
+                padding: 20px 0;
+                text-decoration: none;
+                transition: 0.25s;
+                width: 100%;
+
+                @include lg {
+                    color: black;
+                    font-size: rem-calc(18);
+                    padding: 0 20px;
+
+                }
+            }
+
+            a:hover,
+            a:active {
+                color: #B7A78D;
+            }
+
+        }
+    }
+}
