--- a/dev/scss/sections/_section-6.scss
+++ b/dev/scss/sections/_section-6.scss
@@ -24,8 +24,12 @@
             background-position: center;
             background-position: cover;
             background-repeat: no-repeat;
-            height: 320px;
-            margin: 20px 0px 40px 0px;
+            border-radius: 100%;
+            height: 300px;
+            margin: 20px auto 40px auto;
+            width: 300px;
+
+
 
             @include lg {
                 margin: 0px 0px 0px 0px;
